...

	return (
		<>
			<Layout.SafeAreaView>
				<Layout.KeyboardAvoidingView>
					<Layout.KeyboardDismiss>
						<View style={styles.headingContainer} testID='sign-in-heading'>
							<LogoVertical width={160} height={80} />
							<View style={styles.headerContainer}>
								<Heading fontWeight='bold' style={styles.boldText} size='h5'>
									{t('login_title')}
								</Heading>
								<Text>
...
											<Form.GroupInput>
												<TextInput.Root id={field.name}>
													<TextInput.Control
														ref={emailInputRef}
														autoCapitalize='none'
														keyboardType='email-address'
														testID='email-input'
														placeholder={t('enter_email')}
														value={field.state.value}
														onBlur={field.handleBlur}
														autoFocus
														returnKeyType='next'
														onSubmitEditing={() =>
...
											<Form.GroupInput>
												<TextInput.Root id={field.name}>
													<TextInput.Control
														ref={passwordInputRef}
														autoCapitalize='none'
														keyboardType='default'
														testID='password-input'
														placeholder='*********'
														secureTextEntry={!showPassword}
														value={field.state.value}
														onBlur={field.handleBlur}
														returnKeyType='done'
														onSubmitEditing={() => handleSubmit()}
...
							<Button.Root
								variant='link'
								size='sm'
								color='sf-green'
								style={{ alignSelf: 'flex-end', padding: 4 }}
								testID='forgot-password-button'
								onPress={() => router.push('/(forgot-password)/enter-email')}
							>
								<Button.Text>{t('forgot_password')}</Button.Text>
							</Button.Root>

							<Button.Root
								size='lg'
								testID='sign-in-button'
								onPress={handleSubmit}
							>
								<Button.Text>{t('sign_in')}</Button.Text>
							</Button.Root>
							{/** TODO: remove this/ only show in DEV mode */}
							<Button.Root
...
									}}
								>
									{t('dont_have_account')}
								</Text>

								<Pressable
									testID='register-now-button'
									onPress={() =>
										router.replace('/(onboarding)/choose-language')
									}
									style={{ padding: 4 }}
								>
									<Text
...
