...
										children={(field) => {
											return (
												<View style={{ gap: 4 }}>
													<TextInput.Root id={field.name}>
														<TextInput.Control
															ref={retypePasswordInputRef}
															testID='retypepassword-input'
															autoCapitalize='none'
															keyboardType='default'
															secureTextEntry={!showRetypePassword}
															placeholder='********'
															value={field.state.value as string}
															onBlur={field.handleBlur}
...
										}}
									/>
								</View>
							</View>

							<Button.Root
								testID='submit-password'
								size='lg'
								onPress={handleSubmit}
							>
								<Button.Text>{t('setup_your_password')}</Button.Text>
							</Button.Root>
						</View>
...
